Many various update to the README file

--- a/README
+++ b/README
@@ -1,18 +1,27 @@
 WELCOME TO SCREENDOOR
+www.github.com/write2david/screendoor
 
 
-Website & Git: www.github.com/write2david/screendoor
+CONTENTS
+
+Introduction to Screen
+Introduction to Screendoor
+Using Screendoor
+FAQ
+Bugs & Feature Requests
+History
+
 
 
 
 ==INTRODUCTION TO SCREEN==
 
-	Using "GNU Screen" is like having multiple tabs on all your terminals (a.k.a. "command-line" or "shell"). Additionally, each terminal (that uses Screen) allows the user to quickly access every other terminal* (that uses Screen).
-		This is especially helpful for SSH connections, where it is much quicker to generate two or three more Screen tabs (actually called "windows") and switch between them than to initiate two or three other SSH connections and switch between them.  
-		"GNU Screen" lets you disconnect, for example, from your SSH (or Putty) connection, and the shell/program you were using remains running on the remote machine (within the remote computer's Screen session), ready for you to reconnect to it  -- from any machine.  Screen also features scrollback history, copy-and-paste that doesn't require a mouse, etc.
+	Using "GNU Screen" is like having multiple tabs on all your terminals (a.k.a. "command prompt" or "shell"). Additionally, each terminal/shell* running within Screen allows the user to quickly access every other terminal running within Screen.
+	Using Screen, you will become accustomed to creating and destroying new shell prompts quickly on an as-needed basis.  For example, you may be working on writing a long "rsync" command and create a temporary new shell just to check the man page for information on a certain command-line option. This is especially helpful for SSH connections, where it is much quicker to generate two or three more Screen tabs (actually called Screen "windows") and switch between them than to initiate two or three other SSH connections and switch between them.  
+	"GNU Screen" lets you disconnect (for example, from your SSH connection or Konsole window) and the shell/program you were using remains running on the machine (within the Screen session), ready for you to reconnect to it  -- from any machine.  Screen also features scrollback history, copy-and-paste that doesn't require a mouse, etc.
 
 
-*No matter whether the terminal is a:
+*No matter whether the terminal/shell is a:
 	VT ("Virtual Terminal," -- usually accessed by Alt-F1, Alt-F2, etc.)
 	SSH connection
 	An xterm/Terminal/Konsole window
@@ -39,22 +48,19 @@ Introduction to "GNU Screen" Features, And How-to Guides:
 ==INTRODUCTION TO SCREENDOOR==
 
 GNU Screen, by itself, is not "enabled" for each terminal that is created. Simply configuring the shell to automatically run Screen when a terminal is opened is not enough to enable easy user access to the other running terminals, and will actually be problematic in several situations (such as when there is a SCP login).
-	Thus, the role of Screendoor: to create and manage a central Screen session to be used by all (normal) terminals that are created.  It is so nice to be able to access any type of terminal on my computer and always be placed inside a pre-existing Screen session, able to access all other active terminals.  Using Screendoor, I don't have to remember to start a Screen session for each terminal, or to attached to a previously created Screen session -- this is the role of Screendoor; I am always automatically placed inside of one central Screen session.  When I SSH into my home machine, I can then view and access the Konsole window I was using before I left home.
+	Thus, the role of Screendoor: to automatically create and manage a central Screen session to be used by all shells that are created (though Screendoor is smart enough not to run on SCP and non-interactive shells).  It is so nice to be able to access any type of terminal on my computer and always be placed inside a pre-existing Screen session, able to access all other active terminals.  Using Screendoor, I don't have to remember to start a Screen session for each terminal, or to attach to a previously created Screen session -- this is the role of Screendoor; I am always automatically placed inside of one central Screen session.  When I SSH into my home machine, I can then view and access the Konsole window I was using before I left home.
 
-	When using Screendoor, the main Screen session is named "Screendoor," created by the first login/shell to run.  A new Screen window is created for each new terminal, and the windows are titled according to the date & time they were opened.
+	When using Screendoor, the main Screen session is named "Screendoor," created by the first shell to run (usually the first login to the machine).  A new Screen window is created for each new terminal, and the windows are titled according to the date & time they were opened.
 
 	The "Screendoor" session contains a window named "Cornerstone" simply to hold the session open ("Cornerstone" is a blank, non-writable window, showing a short notice, and is held open with a long "sleep" command).
 
-	Screendoor is written as a BASH script and contains a fair amount of commenting throughout the code.  It deals with Screen-related issues such as: responding to logins initiated by programs like SCP or X-Forwarding-Over-SSH (including Xming), wiping dead Screen sessions, X-Windows running from within Screen and xTerms running within X-Windows, etc.
-	Though written in BASH, Screendoor honors whatever default shell the user has, and will drop the user into their default shell after Screendoor is run.
+	Screendoor is written as a BASH script and contains a fair amount of commenting throughout the source code.  It deals with Screen-related issues such as: responding to logins initiated by programs like SCP or X-Forwarding-Over-SSH (including Xming), wiping dead Screen sessions, X-Windows running from within Screen and xTerms running within X-Windows, etc.
+	Though written in BASH, Screendoor honors whatever default shell the user has, and will drop the user into their default shell after Screendoor is called.
 
-
-
-==DEPENDENCIES==
 
 Screendoor requires the following:
-	GNU Screen
-	BASH (normally already installed)
+	GNU Screen 
+	BASH (normally pre-installed on Unix-like computers)
 	sleep (standard part of GNU "coreutils" package)
 
 
@@ -72,7 +78,8 @@ Step #1) Put a copy of the "screendoor.sh" file into your home directory.  You h
 			http://github.com/write2david/screendoor/blob/master/screendoor.sh
 
 	c)  [Programmer's way]   Clone, and then checkout, the Screendoor git repository from GitHub.
-			Tip:  Clone the git repo to a new local directory, then softlink screendoor.sh (and any dot-files you want) to your home directory, and then clone/pull the repository as often as desired.
+		See the website listed at the top of this document for the git URL.
+		Tip:  Clone the git repo to a new local directory, then softlink screendoor.sh (and any dot-files you want) to your home directory, and then clone/pull the repository as often as desired.
 
 
 
@@ -88,7 +95,7 @@ Step #2) Add the following line to the very END of your shell startup file(s):
 
 --->  OPTIONAL:
 
-	Use all or parts of the example "dot-files" included in the repository:
+	Use all or parts of the example "dot-files" included with Screendoor, available through the website listed at the top of this document OR via the following commands:
 	
 	a)  wget www.tinyurl.com/get-screendoor-screenrc    (for .screenrc)
 	b)  wget www.tinyurl.com/get-screendoor-zshrc     (for .zshrc)
@@ -105,6 +112,10 @@ A:  When you type "exit" you are exiting your current shell.  But, remember your
 
 	With either method, your screen window will be available when you log back in  (if you don't type "exit" first).
 
+
+Q:  The "Cornerstone" window is blank; I don't see the silly "This window holds open the central Screendoor session" message.
+
+A:  Switch to the "Cornestone" window and hit Ctrl-A (to enter a GNU Screen command). Then type ":fit" and press Enter.
 
 
 ==BUGS & FEATURE REQUESTS==
