Minor edits to README

--- a/README
+++ b/README
@@ -49,9 +49,9 @@ Introduction to "GNU Screen" Features, And How-to Guides:
 
 ==INTRODUCTION TO SCREENDOOR==
 
-GNU Screen, by itself, is not "enabled" for each terminal that is created. Simply configuring the shell to automatically run Screen when a terminal is opened is not enough to enable easy user access to the other running terminals, and will actually be problematic in several situations (such as when there is a SCP login).
+GNU Screen, after installing it, is not "enabled" for each terminal that is created. And simply configuring the shell to automatically run Screen when a terminal is opened is not enough to enable easy user access to the other running terminals, and will actually be problematic in several situations (such as when there is a SCP login).
 
-	Thus, the role of Screendoor: to automatically create and manage a central Screen session to be used by all shells that are created (though Screendoor is smart enough not to run on SCP and non-interactive shells).  It is so nice to be able to access any type of terminal on my computer and always be placed inside a pre-existing Screen session, able to access all other active terminals.  Using Screendoor, I don't have to remember to start a Screen session for each terminal, or to attach to a previously created Screen session -- this is the role of Screendoor; I am always automatically placed inside of one central Screen session.  When I SSH into my home machine, I can then view and access the Konsole window I was using before I left home.
+	Thus, the simple role of Screendoor: to automatically create and manage a central Screen session to be used by all shells that are created (though Screendoor is smart enough not to run on SCP and non-interactive shells).  It is so nice to be able to access any type of terminal on my computer and always be placed inside a pre-existing Screen session, able to access all other active terminals.  Using Screendoor, I don't have to remember to start a Screen session for each terminal, or to attach to a previously created Screen session -- this is the role of Screendoor; I am always automatically placed inside of one central Screen session.  When I SSH into my home machine, I can then view and access the Konsole window I was using before I left home.
 
 	When using Screendoor, the main Screen session is named "Screendoor," created by the first shell to run (usually the first login to the machine).  A new Screen window is created for each new terminal, and the windows are titled according to the date & time they were opened.
 
